[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rizemind-flower-blueprint"
version = "0.1.0"
description = "A blueprint on how to use rizemind with flower."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "flwr>=1.19.0",
    "flwr-datasets>=0.5.0",
    "polars>=1.31.0",
    "torch>=2.7.1",
    "scikit-learn>=1.7.1",
    "torchmetrics>=1.8.0",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "mlflow>=3.2.0",
    "rizemind>=0.0.3",
]

[dependency-groups]
dev = [
    "altair[all]>=5.5.0",
    "flwr[simulation]>=1.19.0",
    "ruff>=0.12.5",
    "marimo[lsp]>=0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "t-rize"

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.02
batch-size = 256
fraction-fit = 1.0
min-available-clients = 2
min-evaluate-clients = 2
num-supernodes = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF001", "RUF002", "RUF003"]
ignore = []
allowed-confusables = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
explicit-preview-rules = true
exclude = ["*.marimo.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.marimo.py"]

[tool.web3.swarm.factory_v1]
name = "test_model"

[tool.eth.account.mnemonic_store]
account_name = "account_name"
passphrase = "passphrase"

[tool.web3]
url = "https://testnet.rizenet.io"

[tool.mlflow.config]
run_name = "run_name"
experiment_name = "experiment_name"
mlflow_uri = "mlflow_url"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
